Add endpoint to shuffle order's priority
